added config for real db (not active) and change lang in docker files

--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -79,7 +79,7 @@
 ###
 FROM registry.access.redhat.com/ubi8/openjdk-21:1.20
 
-ENV LANGUAGE='en_US:en'
+ENV LANGUAGE='de_DE:de'
 
 
 # We make four distinct layers so if there are application changes the library layers can be re-used
