--- a/src/main/docker/Dockerfile.legacy-jar
+++ b/src/main/docker/Dockerfile.legacy-jar
@@ -79,7 +79,7 @@
 ###
 FROM registry.access.redhat.com/ubi8/openjdk-21:1.20
 
-ENV LANGUAGE='en_US:en'
+ENV LANGUAGE='de_DE:de'
 
 
 COPY build/lib/* /deployments/lib/
