--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 quarkus.quinoa.ui-root-path=quinoa
 quarkus.quinoa.package-manager-install=true
-quarkus.quinoa.package-manager-install.node-version=20.10.0
+quarkus.quinoa.package-manager-install.node-version=22.12.0
+quarkus.quinoa.package-manager-install.npm-version=9.0.0
 quarkus.log.level=INFO
+
+jdbc.max-size=16
+
+quarkus.datasource.db-kind=postgresql
+#quarkus.datasource.username=fleischer
+#quarkus.datasource.password=derAffe
+
+#quarkus.datasource.reactive.url=postgresql://10.1.0.20:5432/MitFahrApp
+quarkus.datasource.reactive.max-size=20
