--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,15 @@ quarkus.quinoa.package-manager-install.node-version=22.12.0
 quarkus.quinoa.package-manager-install.npm-version=9.0.0
 quarkus.log.level=INFO
 
-jdbc.max-size=16
-
 quarkus.datasource.db-kind=postgresql
-#quarkus.datasource.username=fleischer
-#quarkus.datasource.password=derAffe
+quarkus.datasource.username=fleischer
+quarkus.datasource.password=derAffe
 
-#quarkus.datasource.reactive.url=postgresql://10.1.0.20:5432/MitFahrApp
-quarkus.datasource.reactive.max-size=20
+#quarkus.datasource.jdbc.url = jdbc:postgresql://10.1.0.20:5432/MitFahrApp
+
+prod.quarkus.datasource.jdbc.max-size=8
+prod.quarkus.datasource.jdbc.min-size=2
+
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.sql-load-script=import.sql
