--- a/src/main/webui/package.json
+++ b/src/main/webui/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-query-devtools": "^5.59.16",
     "@types/react-router": "^5.1.20",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "maplibre-gl": "^4.7.1",
     "react": "^18.3.1",
