--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,13 @@ quarkus.quinoa.package-manager-install=true
 quarkus.quinoa.package-manager-install.node-version=22.12.0
 quarkus.quinoa.package-manager-install.npm-version=9.0.0
 quarkus.log.level=INFO
+quarkus.live-reload.instrumentation=true
+quarkus.http.host=0.0.0.0
+quarkus.http.cors.origins=*
+quarkus.http.cors=true
+quarkus.http.cors.access-control-allow-credentials=true
+quarkus.http.cors.methods=GET,POST
+quarkus.http.cors.headers=accept,content-type,x-requested-with,authorisation
 
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=fleischer
@@ -16,3 +23,6 @@ prod.quarkus.datasource.jdbc.min-size=2
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=import.sql
+
+
+mifahrapp.backend.routeServer=https://routes.jackinatox.com
