Sorry dafür, aber ihr braucht das neue property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ quarkus.hibernate-orm.sql-load-script=import.sql
 
 #Ohne / am Ende
 mifahrapp.backend.routeServer=https://routes.jackinatox.com
+mifahrapp.backend.addressServer=https://nominatim.openstreetmap.org
