feat, tested how to write data to the database via the Booking.java class and import.sql feat, inserted test data into the booking table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ quarkus.http.cors.headers=accept,content-type,x-requested-with,authorisation
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=fleischer
 quarkus.datasource.password=derAffe
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:6000/MitFahrApp
+#quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:6000/MitFahrApp
 
 prod.quarkus.datasource.jdbc.max-size=8
 prod.quarkus.datasource.jdbc.min-size=2
