--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ quarkus.quinoa.package-manager-install.npm-version=9.0.0
 quarkus.log.level=INFO
 quarkus.live-reload.enabled=true
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=fleischer
-quarkus.datasource.password=derAffe
+quarkus.datasource.username=pickupPickup
+quarkus.datasource.password=pickupPickup
 
 #here the correct address/dbname for the database should be added
 #quarkus.datasource.jdbc.url = jdbc:postgresql://10.1.0.20:5432/MitFahrApp
@@ -24,5 +24,6 @@ mp.jwt.verify.issuer=https://pickup/issuer
 quarkus.native.resources.includes=publicKey.pem 
 smallrye.jwt.sign.key.location=publicKey.pem 
 
+# Needs to be adjusted to the according server addresses
 mifahrapp.backend.addressServer="127.0.0.1"
 mifahrapp.backend.routeServer="127.0.0.1"
